--- a/pages/1books/HomoDeus/HomoDeus.html
+++ b/pages/1books/HomoDeus/HomoDeus.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../../style.css">
-    <link rel="stylesheet" href="./ikigai_style.css">
+    <link rel="stylesheet" href="./HomoDeus.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -55,11 +55,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.
                 <div class="ribbon1 ribbon-top-left1">
                     <span>Old Book</span>
                 </div>
-                <img src="../../../img/ikigai-1.jpg" alt="" srcset="">
+                <img src="../../../img/HomoDeus.jpeg" alt="" srcset="">
             </div>
             <div class="book-detail">
-                <span class="book-title">Ikigai: The Japanese secret to a <br> long and happy life</span><br>
-                <span class="author">By (Author) <span class="author-name">Héctor García, Francesc Miralles</span></span>
+                <span class="book-title">Homo Deus: A Brief History of Tomorrow</span><br>
+                <span class="author">By (Author) <span class="author-name">Yuval Noah Harari</span></span>
                 <span class="stars">
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -133,8 +133,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.
             </div>
             <div class="about-the-author">
                 <span class="about-the-author_title">About the auther</span>
-                <img src="../../../img/hector-garcia.jpg" alt="" class="hector-garcia-img">
-                <span class="about_author">Héctor García (Author) Héctor García is a citizen of Japan, where he has lived for over a decade, and of Spain, where he was born. He is the author of several books about Japanese culture, including two worldwide bestsellers, A Geek in Japan and Ikigai. A former software engineer, he worked at CERN in Switzerland before moving to Japan. Francesc Miralles (Author) Francesc Miralles is the award-winning and internationally bestselling author of books about how to live well, together with the novels Love in Small Letters and Wabi-Sabi. Alongside Héctor García, he <br> was welcomed to Okinawa in Japan, where the inhabitants live for longer than in any other <br> place in the world. There they had the chance to interview more than a hundred villagers about <br> their philosophy for a long and happy life.</span>
+                <img src="../../../img/Yuval Noah Harari.jpg" alt="" class="hector-garcia-img">
+                <span class="about_author">Prof. Yuval Noah Harari has a PhD in History from the University of Oxford and lectures at the Hebrew University of Jerusalem, specializing in world history. His books have been translated into 65 languages, with 40 million copies sold worldwide. 'Sapiens: A Brief History of Humankind' (2014) looked deep into our past, 'Homo Deus: A Brief History of Tomorrow' (2016) considered far-future scenarios, and '21 Lessons for the 21st Century' (2018) zoomed in on the biggest questions of the present moment. 'Sapiens: A Graphic History' (launched in 2020) is a radical adaptation of 'Sapiens' into a four-part graphic novel series, which Harari created and co-wrote in collaboration with comics artists David Vandermeulen (co-writer) and Daniel Casanave (illustrator). 'Unstoppable Us' (launched 2022) is Harari's first book series for children, telling the epic true story of humans and our superpower in four volumes, and featuring illustrations by Ricard Zaplana Ruiz.</span>
             </div>
         </div>
     </main>
