--- a/pages/1books/do_it_today/do_it_today.html
+++ b/pages/1books/do_it_today/do_it_today.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../../style.css">
-    <link rel="stylesheet" href="./ikigai_style.css">
+    <link rel="stylesheet" href="./do_it_today.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -58,8 +58,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.
                 <img src="../../../img/ikigai-1.jpg" alt="" srcset="">
             </div>
             <div class="book-detail">
-                <span class="book-title">Ikigai: The Japanese secret to a <br> long and happy life</span><br>
-                <span class="author">By (Author) <span class="author-name">Héctor García, Francesc Miralles</span></span>
+                <span class="book-title">Do It Today: Overcome Procrastination, Improve Productivity, and Achieve More Meaningful Things</span><br>
+                <span class="author">By (Author) <span class="author-name">Darius Foroux</span></span>
                 <span class="stars">
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -133,8 +133,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.
             </div>
             <div class="about-the-author">
                 <span class="about-the-author_title">About the auther</span>
-                <img src="../../../img/hector-garcia.jpg" alt="" class="hector-garcia-img">
-                <span class="about_author">Héctor García (Author) Héctor García is a citizen of Japan, where he has lived for over a decade, and of Spain, where he was born. He is the author of several books about Japanese culture, including two worldwide bestsellers, A Geek in Japan and Ikigai. A former software engineer, he worked at CERN in Switzerland before moving to Japan. Francesc Miralles (Author) Francesc Miralles is the award-winning and internationally bestselling author of books about how to live well, together with the novels Love in Small Letters and Wabi-Sabi. Alongside Héctor García, he <br> was welcomed to Okinawa in Japan, where the inhabitants live for longer than in any other <br> place in the world. There they had the chance to interview more than a hundred villagers about <br> their philosophy for a long and happy life.</span>
+                <img src="../../../img/Dariusjpg.jpg" alt="" class="hector-garcia-img">
+                <span class="about_author">Darius Foroux is the author of 7 books, including the best-sellers ‘Think Straight’ and ‘What It Takes To Be Free.’ Since 2015, he’s been sharing his thoughts about life, business, and productivity on his blog.
+
+                    His ideas and work have been featured in TIME, NBC, Fast Company, Inc., Observer, and many more publications. 500K+ people read his blog every month. Join his free newsletter: http://dariusforoux.com/</span>
             </div>
         </div>
     </main>
