--- a/pages/2books/Ikigai/ikigai.html
+++ b/pages/2books/Ikigai/ikigai.html
@@ -52,8 +52,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.
     <main>
         <div class="book-container">
             <div class="book-img">
-                <div class="ribbon1 ribbon-top-left1">
-                    <span>Old Book</span>
+                <div class="red-ribbon red-ribbon-top-left">
+                    <span>New Book</span>
                 </div>
                 <img src="../../../img/ikigai-1.jpg" alt="" srcset="">
             </div>
