--- a/pages/2books/quiet/quiet.html
+++ b/pages/2books/quiet/quiet.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../../style.css">
-    <link rel="stylesheet" href="./ikigai_style.css">
+    <link rel="stylesheet" href="./quiet.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -52,14 +52,14 @@ href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.
     <main>
         <div class="book-container">
             <div class="book-img">
-                <div class="ribbon1 ribbon-top-left1">
-                    <span>Old Book</span>
+                <div class="red-ribbon red-ribbon-top-left">
+                    <span>New Book</span>
                 </div>
-                <img src="../../../img/ikigai-1.jpg" alt="" srcset="">
+                <img src="../../../img/Quiet.jpeg" alt="" srcset="">
             </div>
             <div class="book-detail">
-                <span class="book-title">Ikigai: The Japanese secret to a <br> long and happy life</span><br>
-                <span class="author">By (Author) <span class="author-name">Héctor García, Francesc Miralles</span></span>
+                <span class="book-title">Quiet: The Power of Introverts in a World That Can't Stop Talking</span><br>
+                <span class="author">By (Author) <span class="author-name">Susan Cain</span></span>
                 <span class="stars">
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -133,8 +133,14 @@ href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.
             </div>
             <div class="about-the-author">
                 <span class="about-the-author_title">About the auther</span>
-                <img src="../../../img/hector-garcia.jpg" alt="" class="hector-garcia-img">
-                <span class="about_author">Héctor García (Author) Héctor García is a citizen of Japan, where he has lived for over a decade, and of Spain, where he was born. He is the author of several books about Japanese culture, including two worldwide bestsellers, A Geek in Japan and Ikigai. A former software engineer, he worked at CERN in Switzerland before moving to Japan. Francesc Miralles (Author) Francesc Miralles is the award-winning and internationally bestselling author of books about how to live well, together with the novels Love in Small Letters and Wabi-Sabi. Alongside Héctor García, he <br> was welcomed to Okinawa in Japan, where the inhabitants live for longer than in any other <br> place in the world. There they had the chance to interview more than a hundred villagers about <br> their philosophy for a long and happy life.</span>
+                <img src="../../../img/Susan Cain.jpg" alt="" class="hector-garcia-img">
+                <span class="about_author">SUSAN CAIN is the author of the bestsellers Quiet Journal, Quiet Power: The Secret Strengths of Introverts, and Quiet: The Power of Introverts in A World That Can’t Stop Talking, which has been translated into 40 languages, is in its seventh year on the New York Times best seller list, and was named the #1 best book of the year by Fast Company magazine, which also named Cain one of its Most Creative People in Business.
+
+                    LinkedIn named her the 6th Top Influencer in the world. Susan has partnered with Malcolm Gladwell, Adam Grant and Dan Pink to launch the Next Big Idea Book Club and they donate all their proceeds to children’s literacy programs.
+                    
+                    Her writing has appeared in The New York Times, The Atlantic, The Wall Street Journal, and many other publications. Her record-smashing TED talk has been viewed over 30 million times on TED.com and YouTube combined, and was named by Bill Gates one of his all-time favorite talks.
+                    
+                    Cain has also spoken at Microsoft, Google, the U.S. Treasury, the S.E.C., Harvard, Yale, West Point and the US Naval Academy. She received Harvard Law School’s Celebration Award for Thought Leadership, the Toastmasters International Golden Gavel Award for Communication and Leadership, and was named one of the world’s top 50 Leadership and Management Experts by Inc. Magazine. She is an honors graduate of Princeton and Harvard Law School. She lives in the Hudson River Valley with her husband and two sons.</span>
             </div>
         </div>
     </main>
