--- a/pages/1books/can't_hurt_me/can't_hurt_me.html
+++ b/pages/1books/can't_hurt_me/can't_hurt_me.html
@@ -8,12 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../../style.css">
-    <link rel="stylesheet" href="./ikigai_style.css">
+    <link rel="stylesheet" href="./can't_hurt_me.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<link rel="stylesheet"
-href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.min.css">
     <title>Second Hand Books</title>
 </head>
 <body>
@@ -55,11 +54,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.
                 <div class="ribbon1 ribbon-top-left1">
                     <span>Old Book</span>
                 </div>
-                <img src="../../../img/ikigai-1.jpg" alt="" srcset="">
+                <img src="../../../img/Can't-hurt-me.jpeg" alt="" srcset="">
             </div>
             <div class="book-detail">
-                <span class="book-title">Ikigai: The Japanese secret to a <br> long and happy life</span><br>
-                <span class="author">By (Author) <span class="author-name">Héctor García, Francesc Miralles</span></span>
+                <span class="book-title">Can't Hurt Me: Master Your Mind and Defy the Odds</span><br>
+                <span class="author">By (Author) <span class="author-name">David Goggins</span></span>
                 <span class="stars">
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -105,11 +104,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.
                     <div class="book_infomation_info">
                         <div class="row1">
                             <p class="col1">Pages</p>
-                            <p class="col2 col3">208 Pages</p>
+                            <p class="col2 col3">364 Pages</p>
                         </div>
                         <div class="row2">
                             <p class="col1">Publisher</p>
-                            <p class="col2 col4">Random House UK</p>
+                            <p class="col2 col4">Cornerstone</p>
                         </div>
                         <div class="row3">
                             <p class="col1">Language</p>
@@ -117,11 +116,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.
                         </div>
                         <div class="row4">
                             <p class="col1">Released</p>
-                            <p class="col2 col6">27 September 2017</p>
+                            <p class="col2 col6">11 October 2018</p>
                         </div>
                         <div class="row5">
                             <p class="col1">ISBN</p>
-                            <p class="col2 col7">178633089X</p>
+                            <p class="col2 col7">0593207092</p>
                         </div>
                         <div class="row6">
                             <p class="col1">Book-Cover</p>
@@ -133,8 +132,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.
             </div>
             <div class="about-the-author">
                 <span class="about-the-author_title">About the auther</span>
-                <img src="../../../img/hector-garcia.jpg" alt="" class="hector-garcia-img">
-                <span class="about_author">Héctor García (Author) Héctor García is a citizen of Japan, where he has lived for over a decade, and of Spain, where he was born. He is the author of several books about Japanese culture, including two worldwide bestsellers, A Geek in Japan and Ikigai. A former software engineer, he worked at CERN in Switzerland before moving to Japan. Francesc Miralles (Author) Francesc Miralles is the award-winning and internationally bestselling author of books about how to live well, together with the novels Love in Small Letters and Wabi-Sabi. Alongside Héctor García, he <br> was welcomed to Okinawa in Japan, where the inhabitants live for longer than in any other <br> place in the world. There they had the chance to interview more than a hundred villagers about <br> their philosophy for a long and happy life.</span>
+                <img src="../../../img/David.jpg" alt="" class="hector-garcia-img">
+                <span class="about_author">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque ex quas quasi qui veniam eos nesciunt consequuntur autem dicta fugiat soluta quia, quae magnam natus harum earum. Perferendis, autem excepturi.</span>
             </div>
         </div>
     </main>
