--- a/pages/1books/zero_to_one/zero_to_one.html
+++ b/pages/1books/zero_to_one/zero_to_one.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../../style.css">
-    <link rel="stylesheet" href="./ikigai_style.css">
+    <link rel="stylesheet" href="./zero_to_one.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -55,11 +55,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.
                 <div class="ribbon1 ribbon-top-left1">
                     <span>Old Book</span>
                 </div>
-                <img src="../../../img/ikigai-1.jpg" alt="" srcset="">
+                <img src="../../../img/zero-to-one.jpeg" alt="" srcset="">
             </div>
             <div class="book-detail">
-                <span class="book-title">Ikigai: The Japanese secret to a <br> long and happy life</span><br>
-                <span class="author">By (Author) <span class="author-name">Héctor García, Francesc Miralles</span></span>
+                <span class="book-title">Zero to One: Notes on Startups, or How to Build the Future</span><br>
+                <span class="author">By (Author) <span class="author-name">Peter Thiel</span></span>
                 <span class="stars">
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
@@ -133,8 +133,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.
             </div>
             <div class="about-the-author">
                 <span class="about-the-author_title">About the auther</span>
-                <img src="../../../img/hector-garcia.jpg" alt="" class="hector-garcia-img">
-                <span class="about_author">Héctor García (Author) Héctor García is a citizen of Japan, where he has lived for over a decade, and of Spain, where he was born. He is the author of several books about Japanese culture, including two worldwide bestsellers, A Geek in Japan and Ikigai. A former software engineer, he worked at CERN in Switzerland before moving to Japan. Francesc Miralles (Author) Francesc Miralles is the award-winning and internationally bestselling author of books about how to live well, together with the novels Love in Small Letters and Wabi-Sabi. Alongside Héctor García, he <br> was welcomed to Okinawa in Japan, where the inhabitants live for longer than in any other <br> place in the world. There they had the chance to interview more than a hundred villagers about <br> their philosophy for a long and happy life.</span>
+                <img src="../../../img/Peter Thiel.jpg" alt="" class="hector-garcia-img">
+                <span class="about_author">Peter Thiel is an entrepreneur and investor. He started PayPal in 1998, led it as CEO, and took it public in 2002, defining a new era of fast and secure online commerce. In 2004 he made the first outside investment in Facebook, where he serves as a director. The same year he launched Palantir Technologies, a software company that harnesses computers to empower human analysts in fields like national security and global finance. He has provided early funding for LinkedIn, Yelp, and dozens of successful technology startups, many run by former colleagues who have been dubbed the “PayPal Mafia.” He is a partner at Founders Fund, a Silicon Valley venture capital firm that has funded companies like SpaceX and Airbnb. He started the Thiel Fellowship, which ignited a national debate by encouraging young people to put learning before schooling, and he leads the Thiel Foundation, which works to advance technological progress and long-term thinking about the future.</span>
             </div>
         </div>
     </main>
