--- a/pages/SignUp-In_page.html
+++ b/pages/SignUp-In_page.html
@@ -32,7 +32,7 @@
               </div>
                 <a href="#" class="nav-link">Shop</a>
                 <a href="#" class="nav-link">About</a>
-                <a href="#" class="nav-link">Contact</a>
+                <!-- <a href="#" class="nav-link">Contact</a> -->
             </div>
             <div class="activities">
               <a href="../../SignUp-In_page.html">
