--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                         <a class="links-hidden" href="#">Link 1</a>
                     </div>
                 </div>
-                <a href="#" class="nav-link">Shop</a>
-                <a href="#" class="nav-link">About</a>
+                <a href="./pages/Categories/All Categories/all_categories.html" class="nav-link">Shop</a>
+                <a href="./pages/About/about.html" class="nav-link">About</a>
                 <!-- <a href="#" class="nav-link">Contact</a> -->
             </div>
             <div class="activities">
@@ -887,39 +887,39 @@
             </div>
             <div class="part part-2">
                 <p>Quick Links</p>
-                <a href="">Home</a>
+                <a href="./index.html">Home</a>
                 <br>
-                <a href="">Categories</a>
+                <a href="./pages/Categories/All Categories/all_categories.html">Categories</a>
                 <br>
-                <a href="">Shop</a>
+                <a href="./pages/Categories/All Categories/all_categories.html">Shop</a>
                 <br>
-                <a href="">About</a>
+                <a href="./pages/About/about.html">About</a>
             </div>
             <div class="part part-3">
                 <p>Policy</p>
-                <a href="">Return Police</a>
+                <a href="#">Return Police</a>
                 <br>
-                <a href="">Terms Of Use</a>
+                <a href="#">Terms Of Use</a>
                 <br>
-                <a href="">Security</a>
+                <a href="#">Security</a>
                 <br>
-                <a href="">Privacy</a>
+                <a href="#">Privacy</a>
             </div>
             <div class="part part-4">
                 <p>Categories</p>
-                <a href="">Action</a>
+                <a href="./pages/Categories/All Categories/all_categories.html">Action</a>
                 <br>
-                <a href="">Sci-fi</a>
+                <a href="./pages/Categories/All Categories/all_categories.html">Sci-fi</a>
                 <br>
-                <a href="">Drama</a>
+                <a href="./pages/Categories/All Categories/all_categories.html">Drama</a>
                 <br>
-                <a href="">Kids</a>
+                <a href="./pages/Categories/All Categories/all_categories.html">Kids</a>
                 <br>
-                <a href="">Biography</a>
+                <a href="./pages/Categories/All Categories/all_categories.html">Biography</a>
                 <br>
-                <a href="">Self-Help</a>
+                <a href="./pages/Categories/All Categories/all_categories.html">Self-Help</a>
                 <br>
-                <a href="">Motivation</a>
+                <a href="./pages/Categories/All Categories/all_categories.html">Motivation</a>
             </div>
         </div>
         <hr color="white">
